# solve-kit

./: .gitignore  GUIDE.md  MANIFEST.in  README.md  _ETAT_AVANCEMENT.md  pyproject.toml
.github/workflows/: ci.yml
.solve/commands/: act.md  causes.md  define.md  design.md  gate.md  inspect.md  monitor.md
.solve/templates/: actions-template.md  causes-template.md  dossier-template.md  monitor-template.md  problem-template.md
agents/: officer-1-define-problem.md  officer-5-monitor.md  soldier-asit.md  soldier-catwoe.md  soldier-dashboard.md  soldier-gantt.md  soldier-mece.md  soldier-pareto.md  soldier-risk-raid.md  soldier-value-analysis.md
openai/: commander.py  mission.py
openai/officers/: officer_1_define_problem.py  officer_2_root_cause.py  officer_3_solution.py  officer_4_launch_actions.py  officer_5_monitor.py
openai/soldiers/: soldier_affinity_diagram.py  soldier_asit.py  soldier_brainstorming.py  soldier_circept.py  soldier_dashboard.py  soldier_decision_matrix.py  soldier_ishikawa.py  soldier_mece.py  soldier_pareto.py
skills/5-whys/: SKILL.md
skills/affinity-diagram/: SKILL.md
skills/circept/: SKILL.md
skills/decision-matrix/: SKILL.md
skills/gantt/: SKILL.md
skills/qqoqcp/: SKILL.md
skills/reverse-brainstorming/: SKILL.md
skills/value-analysis/: SKILL.md
solve_cli/: __init__.py  cli.py  integrations.py  scaffolder.py
solve_kit/: commander.py  inspector.py  mission.py  models.py
solve_kit/officers/: officer_1_define_problem.py  officer_2_root_cause.py  (+3 more)
tests/: test_cli.py  test_mission_harness.py  test_structure.py
(+67 files in other folders)
