[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solve-kit"
version = "0.1.0"
description = "Solve-Kit — a generalist, sector-agnostic problem-solving agent army (OpenAI Agents SDK port), portable with the Claude agents/skills mirror."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["openai-agents"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
solve-kit-mission = "solve_kit.mission:main"

[tool.setuptools.packages.find]
include = ["solve_kit*"]
